[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Objects/AsteroidsGenerator.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Position2D1" type="Position2D" parent="."]

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 169.29, -0.985196 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 348.755, 1.88584 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 549.591, -3.85617 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 713.716, 6.2346 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
